(chore)steps: provide intro & detailed steps torun chaos-workflows
Signed-off-by: ksatchit <karthik.s@mayadata.io>

--- a/App/nginx.yaml
+++ b/App/nginx.yaml
@@ -21,6 +21,5 @@ spec:
         imagePullPolicy: Always
         name: nginx
         ports:
-        - containerPort: 8443
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
+        - containerPort: 80
+          protocol: TCP
