--- a/Argo/argowf-chaos-admin.yaml
+++ b/Argo/argowf-chaos-admin.yaml
@@ -1,4 +1,3 @@
-# Stress test to test upper bounds of concurrent pods
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
@@ -9,13 +8,11 @@ spec:
   arguments:
     parameters:
       - name: appNamespace
-        value: "kube-system"
-      - name: appCurrentNamespace
         value: "default"
+      - name: adminModeNamespace
+        value: "litmus"
       - name: appLabel
         value: "nginx"
-      - name: appEndpoint
-        value: "nginx.yourdomain.com"
       - name: fileName
         value: "pod-app-kill-count.json"
   templates:
@@ -23,6 +20,8 @@ spec:
       steps:
         - - name: run-chaos
             template: run-chaos
+          - name: run-benchmark
+            template: run-benchmark
         - - name: revert-chaos
             template: revert-chaos
 
@@ -30,29 +29,24 @@ spec:
       inputs:
         artifacts:
         - name: run-chaos
-          path: /tmp/delete.yaml
+          path: /tmp/chaosengine.yaml
           raw:
             data: |
-              # chaosengine.yaml
               apiVersion: litmuschaos.io/v1alpha1
               kind: ChaosEngine
               metadata:
-                name: k8-pod-delete
-                namespace: {{workflow.parameters.appCurrentNamespace}}
+                name: nginx-chaos
+                namespace: {{workflow.parameters.adminModeNamespace}}
               spec:
-                #ex. values: ns1:name=percona,ns2:run=nginx
                 appinfo:
                   appns: {{workflow.parameters.appNamespace}}
-                  # FYI, To see app label, apply kubectl get pods --show-labels
-                  #applabel: "app=nginx"
                   applabel: "app={{workflow.parameters.appLabel}}"
                   appkind: deployment
                 jobCleanUpPolicy: retain
                 monitoring: false
                 annotationCheck: 'false'
                 engineState: 'active'
-                # this account has been created as part of rbac - rbac-admin.yaml
-                chaosServiceAccount: chaos-admin
+                chaosServiceAccount: litmus-admin
                 experiments:
                   - name: k8-pod-delete
                     spec:
@@ -62,8 +56,6 @@ spec:
                             value: {{workflow.parameters.appNamespace}}
                           - name: LABEL_NAME
                             value: {{workflow.parameters.appLabel}}
-                          - name: APP_ENDPOINT
-                            value: {{workflow.parameters.appEndpoint}}
                           - name: FILE
                             value: {{workflow.parameters.fileName}}
                           - name: REPORT
@@ -73,52 +65,52 @@ spec:
       container:
         image: lachlanevenson/k8s-kubectl
         command: [sh, -c]
-        args: ['kubectl apply -f /tmp/delete.yaml -n {{workflow.parameters.appCurrentNamespace}} | echo "sleeping for 60s" | sleep 60 ']
+        args: ['kubectl apply -f /tmp/chaosengine.yaml -n {{workflow.parameters.adminModeNamespace}} | echo "sleeping for 120s" | sleep 120 ']
 
-    - name: revert-chaos
+    - name: run-benchmark
       inputs:
         artifacts:
-        - name: revert-chaos
-          path: /tmp/delete.yaml
+        - name: run-benchmark
+          path: /tmp/bench.yaml
           raw:
             data: |
-              # chaosengine.yaml
-              apiVersion: litmuschaos.io/v1alpha1
-              kind: ChaosEngine
+              apiVersion: batch/v1
+              kind: Job
               metadata:
-                name: k8-pod-delete
-                namespace: {{workflow.parameters.appCurrentNamespace}}
+                labels:
+                  app: nginx-bench
+                name: nginx-bench
               spec:
-                #ex. values: ns1:name=percona,ns2:run=nginx
-                appinfo:
-                  appns: {{workflow.parameters.appNamespace}}
-                  # FYI, To see app label, apply kubectl get pods --show-labels
-                  #applabel: "app=nginx"
-                  applabel: "app={{workflow.parameters.appLabel}}"
-                  appkind: deployment
-                jobCleanUpPolicy: retain
-                monitoring: false
-                annotationCheck: 'false'
-                engineState: 'active'
-                chaosServiceAccount: chaos-admin
-                experiments:
-                  - name: k8-pod-delete
-                    spec:
-                      components:
-                        env:
-                          - name: NAME_SPACE
-                            value: {{workflow.parameters.appNamespace}}
-                          - name: LABEL_NAME
-                            value: {{workflow.parameters.appLabel}}
-                          - name: APP_ENDPOINT
-                            value: {{workflow.parameters.appEndpoint}}
-                          - name: FILE
-                            value:  {{workflow.parameters.fileName}}
-                          - name: REPORT
-                            value: 'true'
-                          - name: REPORT_ENDPOINT
-                            value: 'none'
+                template:
+                  metadata:
+                    labels:
+                      app: nginx-bench
+                  spec:
+                    restartPolicy: Never
+                    containers:
+                    - args:
+                      - -c
+                      - /go/bin/main -r -c10 -t${BENCHMARK_DURATION} -n 10000000 http://${NGINX_SVC_NAME}:${NGINX_PORT_NUM}/; exit 0
+                      command:
+                      - /bin/sh
+                      env:
+                        - name: NGINX_SVC_NAME
+                          value: "nginx.default.svc.cluster.local"
+                        - name: NGINX_PORT_NUM
+                          value: "80"
+                        - name: BENCHMARK_DURATION
+                          value: "300"
+                      image: devth/alpine-bench
+                      imagePullPolicy: Always
+                      name: nginx-bench
       container:
         image: lachlanevenson/k8s-kubectl
         command: [sh, -c]
-        args: [' sleep 20 | kubectl delete  -f /tmp/delete.yaml -n {{workflow.parameters.appCurrentNamespace}}']
+        args: ['kubectl apply -f /tmp/bench.yaml -n {{workflow.parameters.appNamespace}}']
+
+    - name: revert-chaos
+      container:
+        image: lachlanevenson/k8s-kubectl
+        command: [sh, -c]
+        args: [' sleep 20 | kubectl delete chaosengine nginx-chaos -n {{workflow.parameters.adminModeNamespace}}']
+
