(refactor)workflow: update litmus native pod-delete workflow to use generateName api for bench job
Signed-off-by: ksatchit <karthik.s@mayadata.io>

--- a/Argo/argowf-native-pod-delete.yaml
+++ b/Argo/argowf-native-pod-delete.yaml
@@ -73,7 +73,7 @@ spec:
               metadata:
                 labels:
                   app: nginx-bench
-                name: nginx-bench
+                generateName: nginx-bench-
               spec:
                 template:
                   metadata:
@@ -100,7 +100,7 @@ spec:
       container:
         image: lachlanevenson/k8s-kubectl
         command: [sh, -c]
-        args: ['kubectl apply -f /tmp/bench.yaml -n {{workflow.parameters.appNamespace}}']
+        args: ['kubectl create -f /tmp/bench.yaml -n {{workflow.parameters.appNamespace}}']
 
     - name: revert-chaos
       container:
