--- a/Argo/argowf-native-pod-delete.yaml
+++ b/Argo/argowf-native-pod-delete.yaml
@@ -16,12 +16,12 @@ spec:
   templates:
     - name: argowf-chaos
       steps:
-        - - name: run-benchmark
-            template: run-benchmark
-          - name: run-chaos
-            template: run-chaos
-        - - name: revert-chaos
-            template: revert-chaos
+        - name: run-benchmark
+          template: run-benchmark
+        - name: run-chaos
+          template: run-chaos
+        - name: revert-chaos
+          template: revert-chaos
 
     - name: run-chaos
       inputs:
