--- a/Argo/argowf-chaos-admin.yaml
+++ b/Argo/argowf-chaos-admin.yaml
@@ -20,7 +20,7 @@ spec:
       steps:
         - name: run-chaos
           template: run-chaos
-          name: run-benchmark
+        - name: run-benchmark
           template: run-benchmark
         - name: revert-chaos
           template: revert-chaos
